--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
 
-<!--Loader and slides-->
+	<!--Loader and slides-->
 	<div class="loader">
 		<div class="inner">
 			<img src="photos/mist.gif" alt="mist">
@@ -55,7 +55,7 @@
 
 	</div>
 
-<!--Navigation-->
+	<!--Navigation-->
 	<nav id="navigation" class="navbar navbar-expand-lg">
 		<a class="navbar-brand" href="#">Simplified iPhone's</a>
 
@@ -82,30 +82,30 @@
 		</div>
 	</nav>
 
-<!--Jumbotron-->
+	<!--Jumbotron-->
 	<div id="jumbotron" class="jumbotron">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-6">
-					<h1 class="display-4">iPhone 11 Pro Max!</h1>
-					<p class="lead">All new triple camera system. All day battery life. The fastest chip in a
-						smartphone. And a 6.5inch Super Retina XDR display — the biggest and brightest display in an
-						iPhone.</p>
-					<hr class="my-4">
+				<div class="col-md-12">
+					<h1 class="display-4">iPhone 11 Max!</h1>
+					<p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae atque reprehenderit
+						maiores explicabo necessitatibus expedita dolorem delectus error non temporibus repudiandae
+						velit quasi iure amet, debitis ducimus animi accusantium dicta.
+						<hr class="my-4">
 					<p>Whatever you’re looking for in a phone, there’s an iPhone for you.</p>
 					<p class="lead">
-						<a class="btn btn-dark btn-lg btn-block" href="#" role="button">Learn more</a>
+						<a class="btn btn-dark btn-lg" href="#" role="button">Learn more</a>
 					</p>
 				</div>
-				<div class="col-md-6">
-					<img class="jumbo" src="photos/iphone11.jpg" alt="iphone 11" />
-				</div>
+				<!-- <div class="col-md-6">
+					<img class="jumbo" src="photos/vinoth.png" alt="iphone 11" />
+				</div> -->
 			</div>
 		</div>
 	</div>
 
 
-<!--Main content part 1-->
+	<!--Main content part 1-->
 	<div class="heading">
 		<h2 id="heading">iPhone features</h2>
 	</div>
@@ -119,11 +119,9 @@
 				<div id="cards" class="col-md-6">
 					<div class="text">
 						<h4>Discover the latest technology</h4>
-						<p>Send and receive payments via Apple Pay. Power up your phone with wireless charging. Unlock
-							the latest iPhone models just by looking at them.Worried about spending too much time on
-							your phone? Don’t be.
-							With the new Screen Time feature, you can see how much time you’re spending in each app, and
-							set limits if you want to.</p>
+						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil in odit labore ut dignissimos
+							sed aliquid repudiandae id nulla, tempore ab, nesciunt hic repellat autem nisi non eos
+							voluptas quam!</p>
 					</div>
 				</div>
 			</div>
@@ -136,10 +134,9 @@
 				<div id="cards" class="col-md-6">
 					<div class="text">
 						<h4>Get a seamless experience</h4>
-						<p>With iPhone you can sync and share your pictures, music, apps and more across all your Apple
-							devices. They’re all designed to work seamlessly together, to make your life as easy as
-							possible. Listen to your favourite tracks, check out your photos and open your apps wherever
-							you are - with iCloud, whatever you need is at your fingertips.</p>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, sapiente. Beatae dolorum,
+							placeat labore voluptas eligendi sapiente. Libero, voluptatem magni eos cum ad possimus
+							suscipit veniam architecto esse incidunt animi.</p>
 					</div>
 				</div>
 				<div id="cards" class="col-md-6">
@@ -158,17 +155,16 @@
 				<div id="cards" class="col-md-6">
 					<div class="text">
 						<h4>Have fun with your phone</h4>
-						<p>Watch videos on the web. Track your fitness goals. Chat to your friends. With over 2 million
-							apps to download in the App Store, whatever you do for fun there’s bound to be an app to
-							help you. And if you need to add a social event to your calendar when you’re on the move,
-							just ask Siri.</p>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero aperiam natus fugit eveniet
+							accusantium, corrupti debitis veniam voluptas, incidunt nisi atque expedita eum! Nihil
+							architecto quibusdam quos itaque! Voluptatum, illo?</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 
-<!--Main content part 2-->
+	<!--Main content part 2-->
 	<div id="item" class="section-5">
 		<div id="multi-item-example" class="carousel slide carousel-multi-item" data-ride="carousel">
 			<div class="controls-top">
@@ -178,93 +174,98 @@
 						class="fas fa-chevron-circle-right"></i></a>
 			</div>
 
-	<div class="carousel-inner" role="listbox">
-		<div class="carousel-item active">
-			<div id="item" class="col-md-4">
-				<div class="card mb-2">
-					<img class="card-img-top" src="photos/iphone11-1.PNG" alt="iphone11">
-						<div class="card-body">
-							<h4 class="card-title">iPhone 11</h4>
-								<p class="card-text">iPhone is designed with durable glass in an iPhone and a strong aerospace-grade
-									aluminium band. Charges wirelessly. 2Resists water and dust. 1 4.7-inch Retina
-									HD display with True Tone. 3 12MP camera with sensor and advanced image signal processor.</p>
-								<a class="btn btn-secondary text-light">More info</a>
-						</div>
-					</div>
-				</div>
-
-			<div id="item" class="col-md-4">
-				<div class="card mb-2">
-					<img class="card-img-top" src="photos/iphone11-1.PNG" alt="iphone 11 Pro">
-						<div class="card-body">
-							<h4 class="card-title">iPhone 11</h4>
-							<p class="card-text">iPhone is designed with durable glass in an iPhone and a
-									strong aerospace-grade aluminium band. Charges wirelessly. 2Resists water and dust. 1 4.7-inch Retina
-									HD display with True Tone. 3 12MP camera with sensor and advanced image signal processor.</p>
-							<a class="btn btn-secondary text-light">More info</a>
-						</div>
-					</div>
-				</div>
-
-				<div id="item" class="col-md-4">
-					<div class="card mb-2">
-						<img class="card-img-top" src="photos/iphone11-1.PNG" alt="iphone xs">
+			<div class="carousel-inner" role="listbox">
+				<div class="carousel-item active">
+					<div id="item" class="col-md-4">
+						<div class="card mb-2">
+							<img class="card-img-top" src="photos/Group 2.png" alt="iPhone">
 							<div class="card-body">
-								<h4 class="card-title">iPhone Xs</h4>
-								<p class="card-text">iPhone is designed with durable glass in an iPhone and a
-									strong aerospace-grade aluminium band. Charges wirelessly. 2Resists water and dust. 1 4.7-inch Retina
-									HD display with True Tone. 3 12MP camera with sensor and advanced image signal processor.</p>
+								<h4 class="card-title">iPhone 11</h4>
+								<p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+									Reprehenderit impedit similique alias quos, eveniet, delectus libero placeat
+									nostrum, consectetur eius nam? Illum molestiae fuga iure obcaecati quis. Itaque, non
+									nobis.</p>
 								<a class="btn btn-secondary text-light">More info</a>
 							</div>
+						</div>
+					</div>
+
+					<div id="item" class="col-md-4">
+						<div class="card mb-2">
+							<img class="card-img-top" src="photos/Group 2.png" alt="iPhone">
+							<div class="card-body">
+								<h4 class="card-title">iPhone 11</h4>
+								<p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+									Reprehenderit impedit similique alias quos, eveniet, delectus libero placeat
+									nostrum, consectetur eius nam? Illum molestiae fuga iure obcaecati quis. Itaque, non
+									nobis.</p>
+								<a class="btn btn-secondary text-light">More info</a>
+							</div>
+						</div>
+					</div>
+
+					<div id="item" class="col-md-4">
+						<div class="card mb-2">
+							<img class="card-img-top" src="photos/Group 2.png" alt="iPhone">
+							<div class="card-body">
+								<h4 class="card-text">iPhone Xs</h4>
+								<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit impedit
+									similique alias quos, eveniet, delectus libero placeat nostrum, consectetur eius
+									nam? Illum molestiae fuga iure obcaecati quis. Itaque, non nobis.</p>
+								<a class="btn btn-secondary text-light">More info</a>
+							</div>
+						</div>
 					</div>
 				</div>
-		</div>
-				
-	<div class="carousel-item">
-		<div id="item" class="col-md-4">
-			<div class="card mb-2">
-				<img class="card-img-top" src="photos/iphone11-1.PNG" alt="iphone xr">
-					<div class="card-body">
-						<h4 class="card-title">iPhone XR</h4>
-						<p class="card-text">iPhone is designed with durable glass in an iPhone and a
-									strong aerospace-grade aluminium band. Charges wirelessly. 2Resists water and dust. 1 4.7-inch Retina
-									HD display with True Tone. 3 12MP camera with sensor and advanced image signal processor.</p>
-						<a class="btn btn-secondary text-light">More info</a>
-					</div>
-			</div>
-		</div>
 
-		<div id="item" class="col-md-4">
-			<div class="card mb-2">
-				<img class="card-img-top" src="photos/iphone11-1.PNG" alt="iphone 8">
-					<div class="card-body">
-						<h4 class="card-title">iPhone 8</h4>
-						<p class="card-text">iPhone is designed with durable glass in an iPhone and a
-									strong aerospace-grade aluminium band. Charges wirelessly. 2Resists water and dust. 1 4.7-inch Retina
-									HD display with True Tone. 3 12MP camera with sensor and advanced image signal processor. </p>
-						<a class="btn btn-secondary text-light">More info</a>
+				<div class="carousel-item">
+					<div id="item" class="col-md-4">
+						<div class="card mb-2">
+							<img class="card-img-top" src="photos/Group 2.png" alt="iPhone">
+							<div class="card-body">
+								<h4 class="card-title">iPhone XR</h4>
+								<p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+									Reprehenderit impedit similique alias quos, eveniet, delectus libero placeat
+									nostrum, consectetur eius nam? Illum molestiae fuga iure obcaecati quis. Itaque, non
+									nobis.</p>
+								<a class="btn btn-secondary text-light">More info</a>
+							</div>
+						</div>
 					</div>
-				</div>
-			</div>
 
-		<div id="item" class="col-md-4">
-			<div class="card mb-2">
-				<img class="card-img-top" src="photos/iphone11-1.PNG" alt="iPhone 7">
-					<div class="card-body">
-						<h4 class="card-title">iPhone 7</h4>
-							<p class="card-text">iPhone is designed with durable glass in an iPhone and a
-									strong aerospace-grade aluminium band. Charges wirelessly. 2Resists water and dust. 1 4.7-inch Retina
-									HD display with True Tone. 3 12MP camera with sensor and advanced image signal processor.</p>
-							<a class="btn btn-secondary text-light">More info</a>
+					<div id="item" class="col-md-4">
+						<div class="card mb-2">
+							<img class="card-img-top" src="photos/Group 2.png" alt="iPhone">
+							<div class="card-body">
+								<h4 class="card-title">iPhone 8</h4>
+								<p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+									Reprehenderit impedit similique alias quos, eveniet, delectus libero placeat
+									nostrum, consectetur eius nam? Illum molestiae fuga iure obcaecati quis. Itaque, non
+									nobis.</p>
+								<a class="btn btn-secondary text-light">More info</a>
+							</div>
+						</div>
+					</div>
+
+					<div id="item" class="col-md-4">
+						<div class="card mb-2">
+							<img class="card-img-top" src="photos/Group 2.png" alt="iPhone">
+							<div class="card-body">
+								<h4 class="card-title">iPhone 7</h4>
+								<p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+									Reprehenderit impedit similique alias quos, eveniet, delectus libero placeat
+									nostrum, consectetur eius nam? Illum molestiae fuga iure obcaecati quis. Itaque, non
+									nobis.</p>
+								<a class="btn btn-secondary text-light">More info</a>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	</div>
 
-<!--Signup and footer-->
+	<!--Signup and footer-->
 	<section id="signup" class="signup-section">
 		<div id="overlay"></div>
 		<div class="container">
@@ -287,10 +288,7 @@
 			<div class="row">
 				<div class="col-sm-12 col-md-6">
 					<h6>About</h6>
-					<p class="text-justify">Drive awareness to increase engagement back of the net. You better eat a
-						reality sandwich before you walk back in that boardroom let's schedule a standup during the
-						sprint to review our kpis but get buy-in and killing it, or let's not solutionize this right now
-						parking lot it so bench mark.</p>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod quis ad cupiditate id? Impedit nam quis pariatur laboriosam, quia praesentium mollitia ex expedita quaerat dolorum laudantium numquam eius voluptates voluptatibus.</p>
 				</div>
 
 				<div class="col-xs-6 col-md-3">
@@ -340,11 +338,11 @@
 
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
 		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-	</script>
+		</script>
 
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-	</script>
+		</script>
 
 	<script src="js/js.js"></script>
 </body>
